--- a/PokeViewer.NET/App.config
+++ b/PokeViewer.NET/App.config
@@ -76,6 +76,9 @@
             <setting name="DiscordUserName" serializeAs="String">
                 <value />
             </setting>
+            <setting name="TimeZone" serializeAs="String">
+                <value />
+            </setting>
         </PokeViewer.NET.Properties.Settings>
     </userSettings>
 </configuration>
