--- a/PokeViewer.NET/Properties/Settings.settings
+++ b/PokeViewer.NET/Properties/Settings.settings
@@ -71,5 +71,8 @@
     <Setting Name="DiscordUserName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="TimeZone" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
