Update DisCord Settings

--- a/PokeViewer.NET/PokeViewer.NET.csproj
+++ b/PokeViewer.NET/PokeViewer.NET.csproj
@@ -65,6 +65,13 @@
 		<Compile Update="SubForms\EventCodeEntrySWSH.cs">
 	    <SubType>Form</SubType>
 	  </Compile>
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Update="SubForms\DiscordUtilForm.cs">
+			<SubType>Form</SubType>
+		</Compile>
+	</ItemGroup>
+	<ItemGroup>
 	  <Compile Update="SubForms\MapViewBlueberry.cs" />
 	  <Compile Update="SubForms\FlagChanger.cs">
 	    <SubType>Form</SubType>
